[package]
name = "luge"
version = "0.1.0"
authors = ["Devin Ragotzy <devin.ragotzy@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.59"
itertools = "0.9"

[dependencies.conduit]
git = "https://gitlab.com/DevinR528/conduit"
branch = "dev/sendtxn"
default-features = false

[dependencies.ruma] 
git = "https://github.com/ruma/ruma"
features = ["rand", "client-api", "federation-api", "unstable-pre-spec", "unstable-synapse-quirks", "unstable-exhaustive-types"]
rev = "c15382ca41262058302959eac4029ab4a1ea5889"