[package]
name = "luge"
version = "0.1.0"
authors = ["Devin Ragotzy <devin.ragotzy@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.59"
itertools = "0.9"
tokio = "0.2.22"

[dependencies.conduit]
git = "https://gitlab.com/DevinR528/conduit"
branch = "sendtxn"
default-features = false

[dependencies.ruma] 
git = "https://github.com/ruma/ruma"
features = ["rand", "client-api", "federation-api", "unstable-pre-spec", "unstable-synapse-quirks", "unstable-exhaustive-types"]
rev = "e8882fe8142d7b55ed4c8ccc6150946945f9e237"